tests/neg-deep-subtype/i4372.scala
object i4372 {
  class X[A >: X[? <: X[?]] <: X[A]] // error: too deep
}
